# psf_diagnostics_Euclid

./: README.md  pyproject.toml
data/test/: Euclid_rho_input.fits  Euclid_rho_test.fits  rho_stats_id.fits
notebooks/: wfoutput-to-rhoinput.ipynb
psf_diagnostics_Euclid/: compute_rho_stats.ipynb  compute_rho_stats.py  params_rho.py
