[tool.poetry]
name = "psf-diagnostics-euclid"
version = "0.1.0"
description = "PSF diagnostics for Euclid"
authors = ["Martin Kilbinger <martin.kilbinger@cea.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.9"
cs_util = "0.1.0"
shear_psf_leakage = "^0.2"
numpy = ">=1.26.4,<2.0.0"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
